# 2024_05_08/mvc_crud/app/static/swagger.json
@@ -1,180 +1,174 @@
 {
     "openapi": "3.0.1",
-    "info":{
-        "title": "Biblioteca API",
-        "version": "1.0.0"
+    "info": {
+      "title": "Biblioteca API",
+      "version": "1.0.0"
     },
-    "tags":[
-        {
-            "book": "Libros",
-            "description":"Operaciones relacionadas con los libros en la biblioteca"
-        }
+    "tags": [
+      {
+        "name": "Libros",
+        "description": "Operaciones relacionadas con los libros en la biblioteca"
+      }
     ],
-    "paths":{
-        "/api/books":{
-            "get":{
-                "summary":"Obtiene la lista de todos los libros",
-                "responses":{
-                    "200":{
-                        "description":"Lista de libros",
-                        "content":{
-                            "application/json":{
-                                "schema":{
-                                    "type":"array",
-                                    "items":{
-                                        "$ref":"#/components/schemas/Book"
-                                    }
-                                }
-                            }
-                        }
+    "paths": {
+      "/api/books": {
+        "get": {
+          "summary": "Obtiene la lista de todos los libros",
+          "responses": {
+            "200": {
+              "description": "Lista de libros",
+              "content": {
+                "application/json": {
+                  "schema": {
+                    "type": "array",
+                    "items": {
+                      "$ref": "#/components/schemas/Book"
                     }
+                  }
                 }
-            },
-            "post":{
-                "summary": "Crea un nuevo libro",
-                "requestBody":{
-                    "content":{
-                        "application/json":{
-                            "schema":{
-                                "$ref":"#/components/schemas/Book"
-                            }
-                        }
-                    }
-                },
-                "responses":{
-                    "201":{
-                        "description": "Libro creado",
-                        "content":{
-                            "application/json":{
-                                "schema":{
-                                    "$ref":"#/components/schemas/Book"
-                                }
-                            }
-                        }
-                    }
-                }
+              }
             }
-
+          }
         },
-        "/api/books/{id}":{
-            "get":{
-                "summary":"Obtiene un libro por su ID",
-                "parameters":[
-                    {
-                        "name":"id",
-                        "in":"path",
-                        "required":true,
-                        "schema":{
-                            "type":"integer"
-                        }
-                    }
-                ],
-                "responses":{
-                    "200":{
-                        "description":"Detalles del libro",
-                        "content":{
-                            "application/json":{
-                                "schema":{
-                                    "$ref":"#/components/schemas/Book"
-                                }
-                        }
-                    },
-                    "404":{
-                        "description":"Libro no encontrado"
-                    }
-
+        "post": {
+          "summary": "Crea un nuevo libro",
+          "requestBody": {
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/Book"
                 }
-            },
-            "put":{
-                "summary":"Actualiza un libro por su id",
-                "parameters":[
-                    {
-                        "name":"id",
-                        "in":"path",
-                        "required":true,
-                        "schema":{
-                            "type":"integer"
-                        }
-                    }
-                ],
-                "requestBody":{
-                    "content":{
-                        "application/json":{
-                            "schema":{
-                                "$ref":"#/components/schemas/Book"
-                            }
-                        }
-                    }
-                },
-                "responses":{
-                    "200":{
-                        "description":"Libro actualizado",
-                        "content":{
-                            "application/json":{
-                                "schema":{
-                                    "$ref":"#/components/schemas/Book"
-                                }
-                            }
-                        }
-                    },
-                    "404":{
-                        "description":"Libro no encontrado"
-                    }
-                }
-            },
-            "delete":{
-                "summary":"Elimina un libro por su id",
-                "parameters":[
-                    {
-                        "name":"id",
-                        "in":"path",
-                        "required":true,
-                        "schema":{
-                            "type":"integer"
-                        }
-                    }
-                ],
-                "responses":{
-                    "204":{
-                        "description":"Libro eliminado"
-                    },
-                    "404":{
-                        "description":"Libro no encontrado"
-                    }
-                }
+              }
             }
+          },
+          "responses": {
+            "201": {
+              "description": "Libro creado",
+              "content": {
+                "application/json": {
+                  "schema": {
+                    "$ref": "#/components/schemas/Book"
+                  }
+                }
+              }
+            }
+          }
         }
+      },
+      "/api/books/{id}": {
+        "get": {
+          "summary": "Obtiene un libro por su ID",
+          "parameters": [
+            {
+              "name": "id",
+              "in": "path",
+              "required": true,
+              "schema": {
+                "type": "integer"
+              }
+            }
+          ],
+          "responses": {
+            "200": {
+              "description": "Detalles del libro",
+              "content": {
+                "application/json": {
+                  "schema": {
+                    "$ref": "#/components/schemas/Book"
+                  }
+                }
+              }
+            },
+            "404": {
+              "description": "Libro no encontrado"
+            }
+          }
+        },
+        "put": {
+          "summary": "Actualiza un libro por su id",
+          "parameters": [
+            {
+              "name": "id",
+              "in": "path",
+              "required": true,
+              "schema": {
+                "type": "integer"
+              }
+            }
+          ],
+          "requestBody": {
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/Book"
+                }
+              }
+            }
+          },
+          "responses": {
+            "200": {
+              "description": "Libro actualizado",
+              "content": {
+                "application/json": {
+                  "schema": {
+                    "$ref": "#/components/schemas/Book"
+                  }
+                }
+              }
+            },
+            "404": {
+              "description": "Libro no encontrado"
+            }
+          }
+        },
+        "delete": {
+          "summary": "Elimina un libro por su id",
+          "parameters": [
+            {
+              "name": "id",
+              "in": "path",
+              "required": true,
+              "schema": {
+                "type": "integer"
+              }
+            }
+          ],
+          "responses": {
+            "204": {
+              "description": "Libro eliminado"
+            },
+            "404": {
+              "description": "Libro no encontrado"
+            }
+          }
+        }
+      }
     },
-    "components":{
-        "schemas":{
-            "Book":{
-                "type":"object",
-                "properties":{
-                    "id":{
-                        "type":"integer",
-                        "readOnly":true
-                    },
-                    "title":{
-                        "type":"string"
-                    },
-                    "author":{
-                        "type":"string"
-                    },
-                    "edition":{
-                        "type":"integer"
-                    },
-                    "disponibility":{
-                        "type":"integer"
-                    }
-                },
-                "required":[
-                    "title",
-                    "author",
-                    "edition",
-                    "disponibility"
-                ]
+    "components": {
+      "schemas": {
+        "Book": {
+          "type": "object",
+          "properties": {
+            "id": {
+              "type": "integer",
+              "readOnly": true
+            },
+            "title": {
+              "type": "string"
+            },
+            "author": {
+              "type": "string"
+            },
+            "edition": {
+              "type": "integer"
+            },
+            "disponibility": {
+              "type": "integer"
             }
+          },
+          "required": ["title", "author", "edition", "disponibility"]
         }
+      }
     }
-}
-}
+  }
+  
